update/clean dependencies